# controllers/user_controller.go
@@ -30,6 +30,7 @@ type ProfileDetails struct {
 //	@Produce		json
 //	@Security		BearerAuth
 //	@Success		200	{object}	responses.CurrentUserResponse
+//  @Failure		400	{object}	responses.CurrentUserResponse
 //	@Security		BearerAuth
 //	@Router			/protected/user [get]
 func CurrentUser() gin.HandlerFunc {
@@ -56,8 +57,9 @@ func CurrentUser() gin.HandlerFunc {
 //	@Tags			user
 //	@Accept			json
 //	@Produce		json
-//	@Param			ProfileToUpdate	body		ProfileInput	true	"put profile input json and pass to  gin.Context"
+//	@Param			ProfileToUpdate	body		ProfileDetails	true	"put profile input json and pass to  gin.Context"
 //	@Success		200				{object}	responses.ProfileResponse
+//  @Failure		400				{object}	responses.ProfileResponse
 //	@Security		BearerAuth
 //	@Router			/protected/update-profile [post]
 func UpdateProfile() gin.HandlerFunc {
