# docs/swagger.json
@@ -66,7 +66,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.ReviewRequest"
+                            "$ref": "#/definitions/controllers.ReviewDetails"
                         }
                     }
                 ],
@@ -75,6 +75,58 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/responses.AddReviewResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.FilterTrainerResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/protected/create-booking": {
+            "post": {
+                "description": "Creates a new booking with the specified trainer, trainee, date, start time, and end time",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "bookings"
+                ],
+                "summary": "Create a new booking",
+                "parameters": [
+                    {
+                        "description": "put booking details and pass to gin.Context",
+                        "name": "json_in_ginContext",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.BookingForm"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "booking created successfully",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "type": "string"
                         }
                     }
                 }
@@ -105,13 +157,19 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.FilterTrainerInput"
+                            "$ref": "#/definitions/controllers.FilterTrainerForm"
                         }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/responses.FilterTrainerResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
                         "schema": {
                             "$ref": "#/definitions/responses.FilterTrainerResponse"
                         }
@@ -144,7 +202,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.GetReviewsInput"
+                            "$ref": "#/definitions/controllers.GetReviewsForm"
                         }
                     }
                 ],
@@ -153,6 +211,12 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/responses.TrainerReviewsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/responses.FilterTrainerResponse"
                         }
                     }
                 }
@@ -217,7 +281,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.GetTrainerInput"
+                            "$ref": "#/definitions/controllers.GetTrainerForm"
                         }
                     }
                 ],
@@ -296,7 +360,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.ProfileInput"
+                            "$ref": "#/definitions/controllers.ProfileDetails"
                         }
                     }
                 ],
@@ -334,7 +398,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/controllers.UpdateTrainerInput"
+                            "$ref": "#/definitions/controllers.UpdateTrainerDetails"
                         }
                     }
                 ],
@@ -428,7 +492,24 @@
         }
     },
     "definitions": {
-        "controllers.FilterTrainerInput": {
+        "controllers.BookingForm": {
+            "type": "object",
+            "properties": {
+                "date": {
+                    "type": "string"
+                },
+                "endTime": {
+                    "type": "string"
+                },
+                "startTime": {
+                    "type": "string"
+                },
+                "trainer": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.FilterTrainerForm": {
             "type": "object",
             "required": [
                 "limit"
@@ -451,7 +532,7 @@
                 }
             }
         },
-        "controllers.GetReviewsInput": {
+        "controllers.GetReviewsForm": {
             "type": "object",
             "required": [
                 "limit",
@@ -466,7 +547,7 @@
                 }
             }
         },
-        "controllers.GetTrainerInput": {
+        "controllers.GetTrainerForm": {
             "type": "object",
             "required": [
                 "username"
@@ -492,7 +573,7 @@
                 }
             }
         },
-        "controllers.ProfileInput": {
+        "controllers.ProfileDetails": {
             "type": "object",
             "required": [
                 "address",
@@ -588,7 +669,7 @@
                 }
             }
         },
-        "controllers.ReviewRequest": {
+        "controllers.ReviewDetails": {
             "type": "object",
             "required": [
                 "comment",
@@ -607,7 +688,7 @@
                 }
             }
         },
-        "controllers.UpdateTrainerInput": {
+        "controllers.UpdateTrainerDetails": {
             "type": "object",
             "properties": {
                 "certificateUrl": {
@@ -662,11 +743,11 @@
                 "comment": {
                     "type": "string"
                 },
+                "createdAt": {
+                    "type": "string"
+                },
                 "rating": {
                     "type": "number"
-                },
-                "reviewCreatedAt": {
-                    "type": "string"
                 },
                 "username": {
                     "type": "string"
@@ -676,11 +757,11 @@
         "models.TrainerInfo": {
             "type": "object",
             "properties": {
-                "certificateUrl": {
+                "certificateURL": {
                     "type": "string"
                 },
                 "fee": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "rating": {
                     "type": "number"
